objects/DCCA_LeTS_Hearings_Testimony__c.object
<CustomObject>
    <description>Committee hearings and submitted testimony</description>
    <label>DCCA LeTS Hearings_Testimony</label>
    <nameField>
        <displayFormat>2021-2022-HT# {00000}</displayFormat>
        <label>DCCA LeTS Hearings_Testimony Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DCCA LeTS Hearings_Testimonies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>HT_Div2_Summary__c</fullName>
        <formula>TEXT(DCCA_LeTS_HT_DIV2__c)  &amp; &quot; --Action &quot; &amp;  TEXT(DCCA_LeTS_HT_DIV2_Action__c) &amp; &quot; --Hearing &quot; &amp;  TEXT(DCCA_LeTS_HT_DIV2_Hearing_Position__c) &amp; &quot; --Status &quot; &amp;  TEXT(DCCA_LeTS_HT_DIV2_Testimony_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HT Div2 Summary</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HT_Div3_Summary__c</fullName>
        <formula>TEXT(DCCA_LeTS_HT_DIV3__c)  &amp; &quot; --Action &quot; &amp;  TEXT(DCCA_LeTS_HT_DIV3_Action__c) &amp; &quot; --Hearing &quot; &amp;  TEXT(DCCA_LeTS_HT_DIV3_Hearing_Position__c) &amp; &quot; --Status &quot; &amp;  TEXT(DCCA_LeTS_HT_DIV3_Testimony_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HT Div3 Summary</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HT_Div4_Summary__c</fullName>
        <formula>TEXT(DCCA_LeTS_HT_DIV4__c)  &amp; &quot; --Action &quot; &amp;  TEXT(DCCA_LeTS_HT_DIV4_Action__c) &amp; &quot; --Hearing &quot; &amp;  TEXT(DCCA_LeTS_HT_DIV4_Hearing_Position__c) &amp; &quot; --Status &quot; &amp;  TEXT(DCCA_LeTS_HT_DIV4_Testimony_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HT Div4 Summary</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeTS_Div2_email__c</fullName>
        <label>LeTS Div2 email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>LeTS_Div3_email__c</fullName>
        <label>LeTS Div3 email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>LeTS_Div4_email__c</fullName>
        <label>LeTS Div4 email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DCCA_LeTS_HT_DIV2__c</fullName>
        <label>DIV2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>DCCA_LeTS_Divisions</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>DCCA_LeTS_HT_DIV3__c</fullName>
        <label>DIV3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>DCCA_LeTS_Divisions</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>DCCA_LeTS_HT_DIV4__c</fullName>
        <label>DIV4</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>DCCA_LeTS_Divisions</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>LeTS_Lead_Div_email__c</fullName>
        <label>LeTS Lead Div email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DCCA_LeTS_HT_Measure__c</fullName>
        <formula>DCCA_LeTS_Measure_base__r.DCCA_LeTS_Meas_HSL_Link__c</formula>
        <label>HSL Measure Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DCCA_LeTS_CmteMtgInfo__c</fullName>
        <formula>DCCA_LeTS_HT_Meas_Baseid__c  &amp; &quot; -- &quot; &amp; DCCA_LeTS_HT_Committee__c  &amp; &quot; -- &quot; &amp;   DCCA_LeTS_HT_Frmtd_Date__c  &amp; &quot; -- &quot; &amp; DCCA_LeTS_HT_Cmte_Mtg_Room__c</formula>
        <label>HT CmteMtgInfo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DCCA_LeTS_HT_DIV_Lead__c</fullName>
        <label>DIV Lead</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>DCCA_LeTS_Divisions</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>DCCA_LeTS_HT_Email_DO__c</fullName>
        <label>DCCA LeTS HT Email DO</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DCCA_LeTS_HT_Committee__c</fullName>
        <label>Meas Committee</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DCCA_LeTS_HT_Email_ASO__c</fullName>
        <label>DCCA LeTS HT Email ASO</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DCCA_LeTS_HT_Email_All__c</fullName>
        <label>DCCA LeTS HT Email All</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DCCA_LeTS_HT_Email_DCA__c</fullName>
        <label>DCCA LeTS HT Email DCA</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DCCA_LeTS_HT_Email_DFI__c</fullName>
        <label>DCCA LeTS HT Email DFI</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DCCA_LeTS_HT_Email_INS__c</fullName>
        <label>DCCA LeTS HT Email INS</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DCCA_LeTS_HT_Email_OAH__c</fullName>
        <label>DCCA LeTS HT Email OAH</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DCCA_LeTS_HT_Email_OCP__c</fullName>
        <label>DCCA LeTS HT Email OCP</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DCCA_LeTS_HT_Email_PVL__c</fullName>
        <label>DCCA LeTS HT Email PVL</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DCCA_LeTS_Measure_base__c</fullName>
        <description>This field matches to DCCA LeTS Meas baseid on Main. The field contains the leftmost characters of the Measure Identifier on Main until a space is found.  So just the HB/SB or HCR/SCR or HR/SR or GM with its number leaving off any additional identifiers such as amendments or conference committee results.</description>
        <label>DCCA LeTS Measure base</label>
        <referenceTo>DCCA_LeTS_Measure_Main__c</referenceTo>
        <relationshipLabel>DCCA LeTS Hearings_Testimonies</relationshipLabel>
        <relationshipName>DCCA_LeTS_Hearings_Testimonies</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DCCA_LeTS_HT_Email_BREG__c</fullName>
        <label>DCCA LeTS HT Email BREG</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DCCA_LeTS_HT_Email_CATV__c</fullName>
        <label>DCCA LeTS HT Email CATV</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DCCA_LeTS_HT_Email_ISCO__c</fullName>
        <label>DCCA LeTS HT Email ISCO</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DCCA_LeTS_HT_Email_RICO__c</fullName>
        <label>DCCA LeTS HT Email RICO</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DCCA_LeTS_HT_Frmtd_Date__c</fullName>
        <formula>TEXT(MONTH (DATEVALUE ( DCCA_LeTS_HT_Meeting_Date_Time__c  ))) &amp; &quot;/&quot; &amp; TEXT(DAY (DATEVALUE( DCCA_LeTS_HT_Meeting_Date_Time__c ))) &amp; &quot;/&quot; &amp;  TEXT(YEAR(DATEVALUE(DCCA_LeTS_HT_Meeting_Date_Time__c))) &amp; &quot; at &quot; &amp; TEXT(IF( OR( VALUE( MID( TEXT( DCCA_LeTS_HT_Meeting_Date_Time__c - 10/24 ), 12, 2 ) ) = 0, VALUE( MID( TEXT( DCCA_LeTS_HT_Meeting_Date_Time__c - 10/24  ), 12, 2 ) ) = 12 ), 12, VALUE( MID( TEXT( DCCA_LeTS_HT_Meeting_Date_Time__c - 10/24 ), 12, 2 ) ) - IF( VALUE( MID( TEXT( DCCA_LeTS_HT_Meeting_Date_Time__c - 10/24 ), 12, 2 ) ) &lt; 12, 0, 12 ) )) &amp; &quot;:&quot; &amp; MID( TEXT(  DCCA_LeTS_HT_Meeting_Date_Time__c - 10/24 ), 15, 2 ) &amp; &quot; &quot; &amp; IF( VALUE( MID( TEXT(  DCCA_LeTS_HT_Meeting_Date_Time__c - 10/24), 12, 2 ) ) &lt; 12, &quot;am&quot;, &quot;pm&quot; )</formula>
        <label>DCCA LeTS HT Frmtd Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DCCA_LeTS_HT_Cmte_Stream__c</fullName>
        <label>DCCA LeTS HT Cmte Stream</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>DCCA_LeTS_HT_DIV2_Action__c</fullName>
        <label>DIV2 Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>DCCA_LeTS_DIV_Action</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>DCCA_LeTS_HT_DIV3_Action__c</fullName>
        <label>DIV3 Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>DCCA_LeTS_DIV_Action</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>DCCA_LeTS_HT_DIV4_Action__c</fullName>
        <label>DIV4 Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>DCCA_LeTS_DIV_Action</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>DCCA_LeTS_HT_Email_Coord__c</fullName>
        <label>DCCA LeTS HT Email Coord</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DCCA_LeTS_HT_Email_HPEAP__c</fullName>
        <label>DCCA LeTS HT Email HPEAP</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DCCA_LeTS_HT_Lead_Action__c</fullName>
        <label>Div Lead Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>DCCA_LeTS_DIV_Action</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>DCCA_LeTS_HT_Meas_Baseid__c</fullName>
        <externalId>true</externalId>
        <label>DCCA LeTS HT Meas Baseid</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DCCA_LeTS_Committee_Entry__c</fullName>
        <formula>DCCA_LeTS_HT_Committee__c  &amp; &quot; -- &quot; &amp;   DCCA_LeTS_HT_Frmtd_Date__c  &amp; &quot; -- &quot; &amp;  DCCA_LeTS_HT_Cmte_Mtg_Room__c  &amp; &quot; -- &quot; &amp; DCCA_LeTS_HT_Cmte_Mtg_Notice_Link__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Committee Entry</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DCCA_LeTS_HT_Mtg_Adjusted__c</fullName>
        <formula>DCCA_LeTS_HT_Meeting_Date_Time__c  - (CASE( MOD((DATEVALUE(DCCA_LeTS_HT_Meeting_Date_Time__c)) - DATE( 1900, 1, 7 ), 7 ), 
0, 2,
1, 3,
2, 3,
3, 2,
4, 2,
5, 2,
3))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DCCA LeTS HT Mtg Adjusted</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DCCA_LeTS_HT_Cmte_Mtg_Date__c</fullName>
        <label>DCCA LeTS HT Cmte Mtg Date</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DCCA_LeTS_HT_Cmte_Mtg_Room__c</fullName>
        <label>DCCA LeTS HT Cmte Mtg Room</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DCCA_LeTS_HT_Cmte_Mtg_Notice__c</fullName>
        <defaultValue>&quot;Hearing Notice&quot;</defaultValue>
        <label>HT Cmte Mtg Notice</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DCCA_LeTS_HT_Cmte_Notice_Link__c</fullName>
        <label>DCCA LeTS HT Cmte Notice Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>DCCA_LeTS_HT_Meeting_Date_Time__c</fullName>
        <label>DCCA LeTS HT Meeting Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DCCA_LeTS_HT_Cmte_Mtg_Notice_Link__c</fullName>
        <formula>HYPERLINK(  DCCA_LeTS_HT_Cmte_Notice_Link__c  ,  &quot;Hearing Notice&quot;  )</formula>
        <label>Meas Cmte Mtg Notice Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DCCA_LeTS_HT_DIV2_Hearing_Position__c</fullName>
        <inlineHelpText>Only use Hearing Position if the Action needed does not match Division Action.</inlineHelpText>
        <label>DIV2 Hearing Position</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>DCCA_LeTS_DIV_Action</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>DCCA_LeTS_HT_DIV2_Testimony_Status__c</fullName>
        <label>DIV2 Testimony Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>DCCA_LeTS_Testimony_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>DCCA_LeTS_HT_DIV3_Hearing_Position__c</fullName>
        <inlineHelpText>Only use Hearing Position if the Action needed does not match Division Action.</inlineHelpText>
        <label>DIV3 Hearing Position</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>DCCA_LeTS_DIV_Action</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>DCCA_LeTS_HT_DIV3_Testimony_Status__c</fullName>
        <label>DIV3 Testimony Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>DCCA_LeTS_Testimony_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>DCCA_LeTS_HT_DIV4_Hearing_Position__c</fullName>
        <inlineHelpText>Only use Hearing Position if the Action needed does not match Division Action.</inlineHelpText>
        <label>DIV4 Hearing Position</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>DCCA_LeTS_DIV_Action</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>DCCA_LeTS_HT_DIV4_Testimony_Status__c</fullName>
        <label>DIV4 Testimony Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>DCCA_LeTS_Testimony_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>DCCA_LeTS_HT_DIV_Lead_Hearing_Position__c</fullName>
        <inlineHelpText>Only use Hearing Position if the Action needed does not match Division Action.</inlineHelpText>
        <label>DIV Lead Hearing Position</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>DCCA_LeTS_DIV_Action</valueSetName>
        </valueSet>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>DCCA_LeTS_HT_Measure__c</columns>
        <columns>DCCA_LeTS_HT_Committee__c</columns>
        <columns>DCCA_LeTS_HT_Cmte_Notice_Link__c</columns>
        <columns>DCCA_LeTS_HT_Meeting_Date_Time__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <sharedTo>
            <group>DCCA_LeTS_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>LeTS_Hearings</fullName>
        <columns>DCCA_LeTS_HT_Meas_Baseid__c</columns>
        <columns>DCCA_LeTS_CmteMtgInfo__c</columns>
        <columns>DCCA_LeTS_HT_Meeting_Date_Time__c</columns>
        <columns>DCCA_LeTS_HT_Cmte_Mtg_Notice__c</columns>
        <columns>DCCA_LeTS_HT_Cmte_Mtg_Notice_Link__c</columns>
        <columns>NAME</columns>
        <columns>DCCA_LeTS_Measure_base__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>LeTS Committee Hearings Schedule</label>
    </listViews>
    <listViews>
        <fullName>All_Testimony_Submitted</fullName>
        <booleanFilter>(1 AND 6) OR (2 AND 7) OR (3 AND 8) OR (4 AND 9) OR (5 AND 10)</booleanFilter>
        <columns>DCCA_LeTS_HT_Meas_Baseid__c</columns>
        <columns>DCCA_LeTS_Committee_Entry__c</columns>
        <columns>DCCA_LeTS_HT_Meeting_Date_Time__c</columns>
        <columns>DCCA_LeTS_HT_DIV_Lead__c</columns>
        <columns>DCCA_LeTS_HT_DIV_Testimony_Status__c</columns>
        <columns>DCCA_LeTS_HT_DIV2__c</columns>
        <columns>DCCA_LeTS_HT_DIV2_Testimony_Status__c</columns>
        <columns>DCCA_LeTS_HT_DIV3__c</columns>
        <columns>DCCA_LeTS_HT_DIV3_Testimony_Status__c</columns>
        <columns>DCCA_LeTS_HT_DIV4__c</columns>
        <columns>DCCA_LeTS_HT_DIV4_Testimony_Status__c</columns>
        <columns>DCCA_LeTS_HT_DIV5__c</columns>
        <columns>DCCA_LeTS_HT_DIV5_Testimony_Status__c</columns>
        <columns>NAME</columns>
        <columns>DCCA_LeTS_Measure_base__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>DCCA_LeTS_HT_DIV_Lead__c</field>
            <operation>contains</operation>
            <value>ASO,BREG,CATV,DCA,DFI,DO,HPEAP,INS,ISCO,OAH,OCP,PVL,RICO,PVL_Board</value>
        </filters>
        <filters>
            <field>DCCA_LeTS_HT_DIV2__c</field>
            <operation>contains</operation>
            <value>ASO,BREG,CATV,DCA,DFI,DO,HPEAP,INS,ISCO,OAH,OCP,PVL,RICO,PVL_Board</value>
        </filters>
        <filters>
            <field>DCCA_LeTS_HT_DIV3__c</field>
            <operation>contains</operation>
            <value>ASO,BREG,CATV,DCA,DFI,DO,HPEAP,INS,ISCO,OAH,OCP,PVL,RICO,PVL_Board</value>
        </filters>
        <filters>
            <field>DCCA_LeTS_HT_DIV4__c</field>
            <operation>contains</operation>
            <value>ASO,BREG,CATV,DCA,DFI,DO,HPEAP,INS,ISCO,OAH,OCP,PVL,RICO,PVL_Board</value>
        </filters>
        <filters>
            <field>DCCA_LeTS_HT_DIV5__c</field>
            <operation>contains</operation>
            <value>ASO,BREG,CATV,DCA,DFI,DO,HPEAP,INS,ISCO,OAH,OCP,PVL,RICO,PVL_Board</value>
        </filters>
        <filters>
            <field>DCCA_LeTS_HT_DIV_Testimony_Status__c</field>
            <operation>contains</operation>
            <value>Submitted</value>
        </filters>
        <filters>
            <field>DCCA_LeTS_HT_DIV2_Testimony_Status__c</field>
            <operation>contains</operation>
            <value>Submitted</value>
        </filters>
        <filters>
            <field>DCCA_LeTS_HT_DIV3_Testimony_Status__c</field>
            <operation>contains</operation>
            <value>Submitted</value>
        </filters>
        <filters>
            <field>DCCA_LeTS_HT_DIV4_Testimony_Status__c</field>
            <operation>contains</operation>
            <value>Submitted</value>
        </filters>
        <filters>
            <field>DCCA_LeTS_HT_DIV5_Testimony_Status__c</field>
            <operation>contains</operation>
            <value>Submitted</value>
        </filters>
        <label>All Testimony Submitted</label>
    </listViews>
    <listViews>
        <fullName>INS_Testimony_Submitted</fullName>
        <booleanFilter>(1 AND 6) OR (2 AND 7) OR (3 AND 8) OR (4 AND 9) OR (5 AND 10)</booleanFilter>
        <columns>DCCA_LeTS_Committee_Entry__c</columns>
        <columns>DCCA_LeTS_HT_Meas_Baseid__c</columns>
        <columns>DCCA_LeTS_Measure_base__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>DCCA_LeTS_HT_DIV_Lead__c</field>
            <operation>contains</operation>
            <value>INS</value>
        </filters>
        <filters>
            <field>DCCA_LeTS_HT_DIV2__c</field>
            <operation>contains</operation>
            <value>INS</value>
        </filters>
        <filters>
            <field>DCCA_LeTS_HT_DIV3__c</field>
            <operation>contains</operation>
            <value>INS</value>
        </filters>
        <filters>
            <field>DCCA_LeTS_HT_DIV4__c</field>
            <operation>contains</operation>
            <value>INS</value>
        </filters>
        <filters>
            <field>DCCA_LeTS_HT_DIV5__c</field>
            <operation>contains</operation>
            <value>INS</value>
        </filters>
        <filters>
            <field>DCCA_LeTS_HT_DIV_Testimony_Status__c</field>
            <operation>contains</operation>
            <value>Submitted</value>
        </filters>
        <filters>
            <field>DCCA_LeTS_HT_DIV2_Testimony_Status__c</field>
            <operation>contains</operation>
            <value>Submitted</value>
        </filters>
        <filters>
            <field>DCCA_LeTS_HT_DIV3_Testimony_Status__c</field>
            <operation>contains</operation>
            <value>Submitted</value>
        </filters>
        <filters>
            <field>DCCA_LeTS_HT_DIV4_Testimony_Status__c</field>
            <operation>contains</operation>
            <value>Submitted</value>
        </filters>
        <filters>
            <field>DCCA_LeTS_HT_DIV5_Testimony_Status__c</field>
            <operation>contains</operation>
            <value>Submitted</value>
        </filters>
        <label>INS Testimony Submitted</label>
    </listViews>
    <listViews>
        <fullName>Tagged_Meas_Hearing_Sched</fullName>
        <booleanFilter>(1 OR 2 OR 3 OR 4 OR 5) AND 6</booleanFilter>
        <columns>DCCA_LeTS_HT_Meas_Baseid__c</columns>
        <columns>DCCA_LeTS_CmteMtgInfo__c</columns>
        <columns>DCCA_LeTS_HT_Meeting_Date_Time__c</columns>
        <columns>DCCA_LeTS_HT_Cmte_Mtg_Notice__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>DCCA_LeTS_HT_DIV_Lead__c</columns>
        <columns>DCCA_LeTS_HT_DIV2__c</columns>
        <columns>DCCA_LeTS_HT_DIV3__c</columns>
        <columns>DCCA_LeTS_HT_DIV4__c</columns>
        <columns>DCCA_LeTS_HT_DIV5__c</columns>
        <columns>DCCA_LeTS_HT_Cmte_Mtg_Notice_Link__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>NAME</columns>
        <columns>DCCA_LeTS_Measure_base__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>DCCA_LeTS_HT_DIV_Lead__c</field>
            <operation>contains</operation>
            <value>ASO,BREG,CATV,DCA,DFI,DO,HPEAP,INS,ISCO,OAH,OCP,PVL,RICO,PVL_Board</value>
        </filters>
        <filters>
            <field>DCCA_LeTS_HT_DIV2__c</field>
            <operation>contains</operation>
            <value>ASO,BREG,CATV,DCA,DFI,DO,HPEAP,INS,ISCO,OAH,OCP,PVL,RICO,PVL_Board</value>
        </filters>
        <filters>
            <field>DCCA_LeTS_HT_DIV3__c</field>
            <operation>contains</operation>
            <value>ASO,BREG,CATV,DCA,DFI,DO,HPEAP,INS,ISCO,OAH,OCP,PVL,RICO,PVL_Board</value>
        </filters>
        <filters>
            <field>DCCA_LeTS_HT_DIV4__c</field>
            <operation>contains</operation>
            <value>ASO,BREG,CATV,DCA,DFI,DO,HPEAP,INS,ISCO,OAH,OCP,PVL,RICO,PVL_Board</value>
        </filters>
        <filters>
            <field>DCCA_LeTS_HT_DIV5__c</field>
            <operation>contains</operation>
            <value>ASO,BREG,CATV,DCA,DFI,DO,HPEAP,INS,ISCO,OAH,OCP,PVL,RICO,PVL_Board</value>
        </filters>
        <filters>
            <field>DCCA_LeTS_HT_Meas_Baseid__c</field>
            <operation>greaterThan</operation>
            <value>&quot; &quot;</value>
        </filters>
        <label>Tagged Meas Hearing Sched</label>
    </listViews>
    <listViews>
        <fullName>DCA_Committee_Hearings_Schedule</fullName>
        <booleanFilter>1 OR 2 OR 3 OR 4 OR 5</booleanFilter>
        <columns>DCCA_LeTS_HT_Meas_Baseid__c</columns>
        <columns>DCCA_LeTS_CmteMtgInfo__c</columns>
        <columns>DCCA_LeTS_HT_Meeting_Date_Time__c</columns>
        <columns>DCCA_LeTS_HT_Cmte_Mtg_Notice__c</columns>
        <columns>DCCA_LeTS_HT_Cmte_Mtg_Notice_Link__c</columns>
        <columns>NAME</columns>
        <columns>DCCA_LeTS_Measure_base__c</columns>
        <columns>DCCA_LeTS_HT_DIV_Lead__c</columns>
        <columns>DCCA_LeTS_HT_Lead_Action__c</columns>
        <columns>DCCA_LeTS_HT_DIV2__c</columns>
        <columns>DCCA_LeTS_HT_DIV2_Action__c</columns>
        <columns>DCCA_LeTS_HT_DIV_Testimony_Status__c</columns>
        <columns>DCCA_LeTS_HT_DIV2_Testimony_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>DCCA_LeTS_HT_DIV_Lead__c</field>
            <operation>equals</operation>
            <value>DCA</value>
        </filters>
        <filters>
            <field>DCCA_LeTS_HT_DIV2__c</field>
            <operation>equals</operation>
            <value>DCA</value>
        </filters>
        <filters>
            <field>DCCA_LeTS_HT_DIV3__c</field>
            <operation>equals</operation>
            <value>DCA</value>
        </filters>
        <filters>
            <field>DCCA_LeTS_HT_DIV4__c</field>
            <operation>equals</operation>
            <value>DCA</value>
        </filters>
        <filters>
            <field>DCCA_LeTS_HT_DIV5__c</field>
            <operation>equals</operation>
            <value>DCA</value>
        </filters>
        <label>DCA Committee Hearings Schedule</label>
        <sharedTo>
            <group>DCCA_LeTS_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DCA_LeTS_Committee_Hearings_Schedule</fullName>
        <booleanFilter>1 OR 2 OR 3 OR 4 OR 5</booleanFilter>
        <columns>DCCA_LeTS_HT_Meas_Baseid__c</columns>
        <columns>DCCA_LeTS_CmteMtgInfo__c</columns>
        <columns>DCCA_LeTS_HT_Meeting_Date_Time__c</columns>
        <columns>DCCA_LeTS_HT_Cmte_Mtg_Notice__c</columns>
        <columns>DCCA_LeTS_HT_Cmte_Mtg_Notice_Link__c</columns>
        <columns>NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>DCCA_LeTS_Measure_base__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>DCCA_LeTS_HT_DIV_Lead__c</field>
            <operation>equals</operation>
            <value>DCA</value>
        </filters>
        <filters>
            <field>DCCA_LeTS_HT_DIV2__c</field>
            <operation>equals</operation>
            <value>DCA</value>
        </filters>
        <filters>
            <field>DCCA_LeTS_HT_DIV3__c</field>
            <operation>equals</operation>
            <value>DCA</value>
        </filters>
        <filters>
            <field>DCCA_LeTS_HT_DIV4__c</field>
            <operation>equals</operation>
            <value>DCA</value>
        </filters>
        <filters>
            <field>DCCA_LeTS_HT_DIV5__c</field>
            <operation>equals</operation>
            <value>DCA</value>
        </filters>
        <label>DCA LeTS Committee Hearings Schedule</label>
    </listViews>
    <listViews>
        <fullName>DFI_LeTS_Committee_Hearings_Schedule</fullName>
        <booleanFilter>(1 OR 2 OR 3 OR 4 OR 5)</booleanFilter>
        <columns>DCCA_LeTS_HT_Meas_Baseid__c</columns>
        <columns>DCCA_LeTS_CmteMtgInfo__c</columns>
        <columns>DCCA_LeTS_HT_Cmte_Mtg_Notice__c</columns>
        <columns>DCCA_LeTS_HT_Cmte_Mtg_Notice_Link__c</columns>
        <columns>NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>DCCA_LeTS_Measure_base__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>DCCA_LeTS_HT_DIV_Lead__c</field>
            <operation>equals</operation>
            <value>DFI</value>
        </filters>
        <filters>
            <field>DCCA_LeTS_HT_DIV2__c</field>
            <operation>equals</operation>
            <value>DFI</value>
        </filters>
        <filters>
            <field>DCCA_LeTS_HT_DIV3__c</field>
            <operation>equals</operation>
            <value>DFI</value>
        </filters>
        <filters>
            <field>DCCA_LeTS_HT_DIV4__c</field>
            <operation>equals</operation>
            <value>DFI</value>
        </filters>
        <filters>
            <field>DCCA_LeTS_HT_DIV5__c</field>
            <operation>equals</operation>
            <value>DFI</value>
        </filters>
        <label>DFI LeTS Committee Hearings Schedule</label>
        <sharedTo>
            <group>DFI_Leg_Coord</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>INS_LeTS_Committee_Hearings_Schedule</fullName>
        <booleanFilter>(1 OR 2 OR 3 OR 4 OR 5)</booleanFilter>
        <columns>DCCA_LeTS_HT_Meas_Baseid__c</columns>
        <columns>DCCA_LeTS_CmteMtgInfo__c</columns>
        <columns>HT_Div_Summary__c</columns>
        <columns>HT_Div2_Summary__c</columns>
        <columns>HT_Div3_Summary__c</columns>
        <columns>HT_Div4_Summary__c</columns>
        <columns>HT_Div5_Summary__c</columns>
        <columns>DCCA_LeTS_HT_Cmte_Mtg_Notice__c</columns>
        <columns>DCCA_LeTS_HT_Cmte_Mtg_Notice_Link__c</columns>
        <columns>NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>DCCA_LeTS_Measure_base__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>DCCA_LeTS_HT_DIV_Lead__c</field>
            <operation>equals</operation>
            <value>INS</value>
        </filters>
        <filters>
            <field>DCCA_LeTS_HT_DIV2__c</field>
            <operation>equals</operation>
            <value>INS</value>
        </filters>
        <filters>
            <field>DCCA_LeTS_HT_DIV3__c</field>
            <operation>equals</operation>
            <value>INS</value>
        </filters>
        <filters>
            <field>DCCA_LeTS_HT_DIV4__c</field>
            <operation>equals</operation>
            <value>INS</value>
        </filters>
        <filters>
            <field>DCCA_LeTS_HT_DIV5__c</field>
            <operation>equals</operation>
            <value>INS</value>
        </filters>
        <label>INS LeTS Committee Hearings Schedule</label>
        <sharedTo>
            <group>DCCA_LeTS_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>OCP_LeTS_Committee_Hearings_Schedule</fullName>
        <booleanFilter>(1 OR 2 OR 3 OR 4 OR 5)</booleanFilter>
        <columns>DCCA_LeTS_HT_Meas_Baseid__c</columns>
        <columns>DCCA_LeTS_CmteMtgInfo__c</columns>
        <columns>DCCA_LeTS_HT_Cmte_Mtg_Notice__c</columns>
        <columns>DCCA_LeTS_HT_Cmte_Mtg_Notice_Link__c</columns>
        <columns>NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>DCCA_LeTS_Measure_base__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>DCCA_LeTS_HT_DIV_Lead__c</field>
            <operation>equals</operation>
            <value>OCP</value>
        </filters>
        <filters>
            <field>DCCA_LeTS_HT_DIV2__c</field>
            <operation>equals</operation>
            <value>OCP</value>
        </filters>
        <filters>
            <field>DCCA_LeTS_HT_DIV3__c</field>
            <operation>equals</operation>
            <value>OCP</value>
        </filters>
        <filters>
            <field>DCCA_LeTS_HT_DIV4__c</field>
            <operation>equals</operation>
            <value>OCP</value>
        </filters>
        <filters>
            <field>DCCA_LeTS_HT_DIV5__c</field>
            <operation>equals</operation>
            <value>OCP</value>
        </filters>
        <label>OCP LeTS Committee Hearings Schedule</label>
    </listViews>
    <listViews>
        <fullName>PVL_LeTS_Committee_Hearings_Schedule</fullName>
        <booleanFilter>(1 OR 2 OR 3 OR 4 OR 5)</booleanFilter>
        <columns>DCCA_LeTS_HT_Meas_Baseid__c</columns>
        <columns>DCCA_LeTS_CmteMtgInfo__c</columns>
        <columns>DCCA_LeTS_HT_Cmte_Mtg_Notice__c</columns>
        <columns>DCCA_LeTS_HT_Cmte_Mtg_Notice_Link__c</columns>
        <columns>NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>DCCA_LeTS_Measure_base__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>DCCA_LeTS_HT_DIV_Lead__c</field>
            <operation>contains</operation>
            <value>PVL,PVL_Board</value>
        </filters>
        <filters>
            <field>DCCA_LeTS_HT_DIV2__c</field>
            <operation>contains</operation>
            <value>PVL,PVL_Board</value>
        </filters>
        <filters>
            <field>DCCA_LeTS_HT_DIV3__c</field>
            <operation>contains</operation>
            <value>PVL,PVL_Board</value>
        </filters>
        <filters>
            <field>DCCA_LeTS_HT_DIV4__c</field>
            <operation>contains</operation>
            <value>PVL,PVL_Board</value>
        </filters>
        <filters>
            <field>DCCA_LeTS_HT_DIV5__c</field>
            <operation>contains</operation>
            <value>PVL,PVL_Board</value>
        </filters>
        <label>PVL LeTS Committee Hearings Schedule</label>
        <sharedTo>
            <group>DCCA_LeTS_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CATV_LeTS_Committee_Hearings_Schedule</fullName>
        <booleanFilter>(1 OR 2 OR 3 OR 4 OR 5)</booleanFilter>
        <columns>DCCA_LeTS_HT_Meas_Baseid__c</columns>
        <columns>DCCA_LeTS_CmteMtgInfo__c</columns>
        <columns>DCCA_LeTS_HT_Cmte_Mtg_Notice__c</columns>
        <columns>DCCA_LeTS_HT_Cmte_Mtg_Notice_Link__c</columns>
        <columns>NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>DCCA_LeTS_Measure_base__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>DCCA_LeTS_HT_DIV_Lead__c</field>
            <operation>equals</operation>
            <value>CATV</value>
        </filters>
        <filters>
            <field>DCCA_LeTS_HT_DIV2__c</field>
            <operation>equals</operation>
            <value>CATV</value>
        </filters>
        <filters>
            <field>DCCA_LeTS_HT_DIV3__c</field>
            <operation>equals</operation>
            <value>CATV</value>
        </filters>
        <filters>
            <field>DCCA_LeTS_HT_DIV4__c</field>
            <operation>equals</operation>
            <value>CATV</value>
        </filters>
        <filters>
            <field>DCCA_LeTS_HT_DIV5__c</field>
            <operation>equals</operation>
            <value>CATV</value>
        </filters>
        <label>CATV LeTS Committee Hearings Schedule</label>
    </listViews>
</CustomObject>